force-app/main/default/objects/Contact2Interaction__c/Contact2Interaction__c.object-meta.xml
<CustomObject>
    <description>This is a junction object between contact and opportunity.</description>
    <label>Contact2Interaction</label>
    <nameField>
        <displayFormat>C2I-{0000000}</displayFormat>
        <label>Contact2Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact2Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>