force-app/main/default/objects/Contact2Interaction__c/fields/End_Date_deleted__c.field-meta.xml
<CustomField>
    <fullName>End_Date_deleted__c</fullName>
    <label>End Date Deleted</label>
    <type>Date</type>
</CustomField>