force-app/main/default/objects/Contact2Interaction__c/fields/Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Date__c</fullName>
    <formula>LBR_Interactions__r.Interaction_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interaction Date</label>
    <type>Date</type>
</CustomField>