force-app/main/default/objects/Contact2Interaction__c/fields/Interaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Status__c</fullName>
    <formula>text( LBR_Interactions__r.Interaction_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interaction Status</label>
    <type>Text</type>
</CustomField>