force-app/main/default/objects/Contact2Interaction__c/fields/Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Type__c</fullName>
    <formula>text(LBR_Interactions__r.Interaction_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interaction Type</label>
    <type>Text</type>
</CustomField>