force-app/main/default/objects/Contact2Interaction__c/fields/LBR_Interactions__c.field-meta.xml
<CustomField>
    <fullName>LBR_Interactions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LBR Interactions</label>
    <referenceTo>LBR_Interactions__c</referenceTo>
    <relationshipLabel>Contact2Interactions</relationshipLabel>
    <relationshipName>Contact2Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>