force-app/main/default/objects/Contact2Interaction__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contact2Interactions</relationshipLabel>
    <relationshipName>Contact2Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>