force-app/main/default/objects/Contact2Interaction__c/fields/Unique_Records__c.field-meta.xml
<CustomField>
    <fullName>Unique_Records__c</fullName>
    <description>Count of unique records to use in reports</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count of unique records to use in reports</inlineHelpText>
    <label>Unique Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>